change role scopes logic and test